@@ -50,6 +50,7 @@ if (file_exists(SM_PATH . 'config/config.php')) {
 ?><!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
+    <meta name="robots" content="noindex,nofollow">
     <title>SquirrelMail configtest</title>
 </head>
 <body>
